--- a/pages/vivir-en.html
+++ b/pages/vivir-en.html
@@ -33,43 +33,39 @@
 	
 <div class="container-body">
 <!-- Header y Barra de Nav -->
-<div class="row">
-	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
-	<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
-		<a class="navbar-brand header__titulo" href="../index.html">
-		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-items-center" alt="logo">
-		  NOMADS
-		</a>
-
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="navbar-nav ml-auto text-center">
-				<a class="nav-item nav-link" href="../index.html">Home</a>
-				<a class="nav-item nav-link" href="quienes-somos.html">Quienes Somos</a>
-				<a class="nav-item nav-link active" href="vivir-en.html">Vivir En</a>
-				<a class="nav-item nav-link" href="viajes.html">Viajes</a>
-				<a class="nav-item nav-link" href="contacto.html">Contacto</a>
-			</div>
-		</div>
-
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="ml-auto text-center">
-				<a href="contacto.html"><i class="fas fa-bell notifProf"></i></a>
-				<a href="contacto.html"><i class="fas fa-user-circle notifProf"></i></a>
-			</div>
-		</div>	
-	</nav>
-	</div>
-</div>
-<!-- VIVIR EN... -->
-	<div class="row">
+<div class="container-fluid">
+	<header class="row">
 		<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
-			<h3 class="wow bounceIn subtitulo__qs">Vivir En...</h3>
+			<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header header--margin">
+				<a class="navbar-brand header__titulo" href="../index.html">
+				  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-items-center" alt="logo">
+				  NOMADS
+				</a>
+
+				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav ml-auto text-center">
+						<a class="nav-item nav-link" href="../index.html">Home</a>
+						<a class="nav-item nav-link" href="quienes-somos.html">Quienes Somos</a>
+						<a class="nav-item nav-link active" href="vivir-en.html">Vivir En</a>
+						<a class="nav-item nav-link" href="viajes.html">Viajes</a>
+						<a class="nav-item nav-link" href="contacto.html">Contacto</a>
+					</div>
+				</div>
+
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="ml-auto text-center">
+						<a href="contacto.html"><i class="fas fa-bell notifProf"></i></a>
+						<a href="contacto.html"><i class="fas fa-user-circle notifProf"></i></a>
+					</div>
+				</div>	
+			</nav>
 		</div>
-	</div>
+	</header>
+</div>
 
 <!-- VIVIR EN... -->
 
@@ -77,7 +73,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
-				<h3 class="wow bounceIn subrayado subtitulo__qs">Vivir En Europa</h3>
+				<h3 class="wow bounceIn subrayado subtitulo__qs left">Vivir En Europa</h3>
 			</div>
 		</div>
 
@@ -87,8 +83,8 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Suiza</h4>
-				<p class="wow slideInRight">Asi se Emigra a Suiza</p>
-				<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia por si te interesa Vivir En Suiza.</p>
+				<p class="wow slideInRight"><strong>Asi se Emigra a Suiza</strong></p>
+				<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia, por si te interesa Vivir En Suiza.</p>
 			</div>
 		</div>
 
@@ -98,8 +94,8 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En España</h4>
-				<p class="wow slideInRight">Asi se Emigra a España</p>
-				<p class="justify wow slideInRight">En este Post ses explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
+				<p class="wow slideInRight"><strong>Asi se Emigra a España</strong></p>
+				<p class="justify wow slideInRight">En este Post se explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
 			</div>
 		</div>
 
@@ -109,7 +105,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Alemania</h4>
-				<p class="wow slideInRight">Asi se emigra a Alemania con "Work and Holiday"</p>
+				<p class="wow slideInRight"><strong>Asi se emigra a Alemania con "Work and Holiday"</strong></p>
 				<p class="justify wow slideInRight">Nacho te cuenta su experiencia trabajando y viviendo en Alemania, mas espeficico en Berlin la Capital de este Pais Europeo.</p>
 			</div>
 		</div>
@@ -119,7 +115,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12">
-				<h3 class="wow bounceIn subrayado subtitulo__qs">Vivir En Asia</h3>
+				<h3 class="wow bounceIn subrayado subtitulo__qs left">Vivir En Asia</h3>
 			</div>
 		</div>
 
@@ -129,8 +125,8 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Corea del Sur</h4>
-				<p class="wow slideInRight">Asi es Emigrar a Corea del Sur</p>
-				<p class="justify wow slideInRight">En esta ocasion traemos la historia de Israel, un Argentino de emigro a Corea del Sur y te cuenta su experiencia, por si queres Vivir en Corea.</p>
+				<p class="wow slideInRight"><strong>Asi es Emigrar a Corea del Sur</strong></p>
+				<p class="justify wow slideInRight">En esta ocasion traemos la historia de Israel, un Argentino de emigro a Corea del Sur y te cuenta su experiencia, por si te interesa Vivir en Corea.</p>
 			</div>
 		</div>
 
@@ -140,7 +136,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Japon</h4>
-				<p class="wow slideInRight">Asi es Emigrar a Japon</p>
+				<p class="wow slideInRight"><strong>Asi es Emigrar a Japon</strong></p>
 				<p class="justify wow slideInRight">Conoce a estos dos Hermanos que emigraron a Japon, Manu y Virgi son Cordobeses y te explican como obtener la Visa Working Holiday Japon.</p>
 			</div>
 		</div>
@@ -150,7 +146,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12">
-				<h3 class="wow bounceIn subrayado subtitulo__qs">Vivir En America</h3>
+				<h3 class="wow bounceIn subrayado subtitulo__qs left">Vivir En America</h3>
 			</div>
 		</div>
 
@@ -160,7 +156,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Canada</h4>
-				<p class="wow slideInRight">Asi se Emigra a Canada</p>
+				<p class="wow slideInRight"><strong>Asi se Emigra a Canada</strong></p>
 				<p class="justify wow slideInRight">En este Blog te Explicamos como es emigrar a Canada, Por si te interesa Vivir En Canada.</p>
 			</div>
 		</div>
@@ -171,7 +167,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Estados Unidos</h4>
-				<p class="wow slideInRight">Asi se Emigra a Estados Unidos</p>
+				<p class="wow slideInRight"><strong>Asi se Emigra a Estados Unidos</strong></p>
 				<p class="justify wow slideInRight">Aqui te Explicamos Como es Vivir En Estados Unidos.</p>
 			</div>
 		</div>
@@ -182,7 +178,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Argentina</h4>
-				<p class="wow slideInRight">Asi es Vivir En Argentina</p>
+				<p class="wow slideInRight"><strong>Asi es Vivir En Argentina</strong></p>
 				<p class="justify wow slideInRight">En este Blog te cuentan sobre la experiencia de estudiar y emigrar a Latino-America, mas especifico en Argentina.</p>
 			</div>
 		</div>
@@ -192,7 +188,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12">
-				<h3 class="wow bounceIn subrayado subtitulo__vivirEn">Vivir En Oceania</h3>
+				<h3 class="wow bounceIn subrayado subtitulo__vivirEn left">Vivir En Oceania</h3>
 			</div>
 		</div>
 
@@ -202,7 +198,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Nueva Zelanda</h4>
-				<p class="wow slideInRight">Asi es Emigrar a Nueva Zelanda</p>
+				<p class="wow slideInRight"><strong>Asi es Emigrar a Nueva Zelanda</strong></p>
 				<p class="justify wow slideInRight">En este Post te van a contar lo que es Emigrar a Nueva Zelanda segun la experiencia de Mildred, Por si te interesa Vivir en Nueva Zelanda.</p>
 			</div>
 		</div>
@@ -213,27 +209,33 @@
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Australia</h4>
-				<p class="wow slideInRight">Asi es Emigrar a Australia</p>
+				<p class="wow slideInRight"><strong>Asi es Emigrar a Australia</strong></p>
 				<p class="justify wow slideInRight">En este Post podras leer todo acerca de Emigrar a Australia, por si te interesa Vivir en Australia.</p>
 			</div>
 		</div>
 	</div>
 
 	<!-- Footer -->
-<div class="row">
-	<div class="col-lg-12 col-xs-12">
-		<footer class="bg-light text-center text-lg-start">
-		  <!-- Copyright -->
-		  <div class="text-center p-3" style="background-color: #74c69d;">
-		    © 2020 Copyright:
-		    <a class="text-dark" href="../index.html">Nomads.com</a>
-		  </div>
-		  <!-- Copyright -->
-		</footer>
-	</div>
+<div class="container-fluid footer--color">
+	<footer>
+		<div class="footer-contenedor">
+			<h3>NOMADS</h3>
+			<ul class="footer__redes">
+				<li><a target="blanck_" href="https://es-la.facebook.com/enespanol/"><i class="fab fa-facebook-square"></i></a></li>
+				<li><a target="blanck_" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin"></i></a></li>
+				<li><a target="blanck_" href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+				<li><a target="blanck_" href="https://twitter.com/?lang=es"><i class="fab fa-twitter-square"></i></a></li>
+				<li><a target="blanck_" href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+			</ul>
+			<p>Sitio Oficial de Nomads | Todos los derechos reservados</p>
+		</div>
+		<div class="footer-bottom">
+			<p>copyright &copy;2021 Nomads. Designed By <span>Matias Carballo Schatz</span></p>
+		</div>
+	</footer>
 </div>
 
-
+<!-- cierre body -->
 </div>
 <!-- Opcion 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
