--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
 	</div>
 </div>
 
+<!-- SPONSORS -->
+<div class="container-fluid sponsors--color align-items-center justify-content-center">
+	<div class="container" id="carousel">
+		<div id="carouselIndex" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block" src="assets/imagenes/sponsors1.png" width="100%" height="300px" alt="First slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block" src="assets/imagenes/sponsors2.png" width="100%" height="300px" alt="Second slide">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- VIVIR EN... -->
 <div class="container">
 	<div class="row">
